--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,6 +43,7 @@ Some suggestions can be found below:
 */
 /* COLORS */
 /* FONT */
+/* ICON */
 /* TRANSITION */
 /* GET FUNCTIONS */
 *, *::before, *::after {
@@ -65,7 +66,6 @@ input[type=number] {
 
 header {
   padding: 20px 40px;
-  background-color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -102,6 +102,30 @@ header h1 {
   color: #3e52a3;
 }
 
+.searchbar {
+  max-width: fit-content;
+  padding: 1rem;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.searchbar input, .searchbar button {
+  border: 0;
+  margin: 0 8px;
+  background: transparent;
+}
+.searchbar input {
+  min-width: 400px;
+}
+.searchbar input:focus {
+  outline: none;
+}
+.searchbar img {
+  margin-top: 2px;
+  width: 0.9rem;
+}
+
 body {
   background-color: #fafafa;
   font-family: "Nunito Sans", sans-serif;
@@ -109,6 +133,7 @@ body {
 }
 
 .element {
+  background-color: white;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
 }
 
