--- a/src/scss/_functions.scss
+++ b/src/scss/_functions.scss
@@ -32,3 +32,7 @@
 @function get-transition($index: 1) {
     @return list.nth($transition, $index);
 }
+
+@function get-icon-size($index: 1) {
+    @return $icon_size;
+}
