--- a/src/css/index.css
+++ b/src/css/index.css
@@ -52,6 +52,10 @@ Some suggestions can be found below:
   box-sizing: border-box;
 }
 
+a {
+  color: black;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -102,6 +106,16 @@ header h1 {
   color: #3e52a3;
 }
 
+.map_search {
+  padding: 50px;
+}
+
+.map_search_header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .searchbar {
   max-width: fit-content;
   padding: 1rem;
@@ -126,6 +140,55 @@ header h1 {
   width: 0.9rem;
 }
 
+.dropdown {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.dropdown button {
+  min-width: 200px;
+  border: 0;
+  margin: 0 8px;
+  padding: 1rem;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.dropdown button img {
+  width: 0.9rem;
+}
+.dropdown .options {
+  padding: 1rem 0;
+  min-width: 200px;
+  position: absolute;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  transform: translateY(0%);
+  opacity: 0;
+  z-index: -1;
+  transition: z-index 0.1s ease-in 500ms, opacity 0.1s ease-in 500ms, transform 0.1s ease-in 500ms;
+}
+.dropdown .options a {
+  padding: 0.5rem 1rem;
+  width: 100%;
+  text-decoration: none;
+  font-size: 0.8rem;
+}
+.dropdown .options a:hover {
+  background-color: #fafafa;
+}
+.dropdown:hover .options, .dropdown .options:hover {
+  transform: translateY(30%);
+  opacity: 1;
+  z-index: 0;
+  transition: 0.2s ease-out;
+}
+
 body {
   background-color: #fafafa;
   font-family: "Nunito Sans", sans-serif;
@@ -135,6 +198,7 @@ body {
 .element {
   background-color: white;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
+  transition: 0.1s ease-in;
 }
 
 .dark_background {
