--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+a {
+  color: black;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
