--- a/src/scss/components/MapSearch.scss
+++ b/src/scss/components/MapSearch.scss
@@ -1,3 +1,13 @@
+.map_search {
+    padding: 50px;
+}
+
+.map_search_header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .searchbar {
     max-width: fit-content;
     padding: 1rem;
@@ -20,11 +30,76 @@
     input:focus {
         outline: none;
     }
-    
-
 
     img {
         margin-top: 2px;
         width: get-icon-size();
     }
 }
+
+.dropdown {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    button {
+        min-width: 200px;
+        border: 0;
+        margin: 0 8px;
+        padding: 1rem;
+        border-radius: 3px;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        img {
+            width: get-icon-size();
+        }
+    }
+
+    .options {
+        padding: 1rem 0;
+        min-width: 200px;
+        position: absolute;
+        border-radius: 3px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+
+        transform: translateY(0%);
+        opacity: 0;
+        z-index: -1;
+
+        transition:
+            z-index 0.1s ease-in 500ms,
+            opacity 0.1s ease-in 500ms,
+            transform 0.1s ease-in 500ms;
+
+
+        a {
+            padding: 0.5rem 1rem;
+            width: 100%;
+
+            text-decoration: none;
+            font-size: 0.8rem;
+        }
+
+        a:hover {
+            background-color: get-neutral(5);
+        }
+    }
+
+    &:hover .options, .options:hover {
+        transform: translateY(30%);
+        opacity: 1;
+        z-index: 0;
+
+        transition: 0.2s ease-out;
+    }
+
+}
+
