--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,7 @@ body {
 .element {
     background-color: get-neutral(6);
     box-shadow: 0px 0px 5px 2px hsla(0, 0%, 0%, 0.1);
+    transition: get-transition(1);
 }
 
 .dark_background {
@@ -31,8 +32,6 @@ body {
     color: get-neutral(6);
     transition: get-transition(1);
 }
-
-
 
 .App {
     min-height: 100vh;
