--- a/src/css/index.css
+++ b/src/css/index.css
@@ -106,11 +106,11 @@ header h1 {
   color: #3e52a3;
 }
 
-.map_search {
+.flagsearch {
   padding: 50px;
 }
 
-.map_search_header {
+.flagsearch_header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -187,6 +187,37 @@ header h1 {
   opacity: 1;
   z-index: 0;
   transition: 0.2s ease-out;
+}
+
+.flagsearch_body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 3%;
+}
+
+.flagcard {
+  margin: 2% 0;
+  border-radius: 5px;
+  overflow: hidden;
+  height: fit-content;
+  min-height: 350px;
+  flex: 0 20%;
+}
+.flagcard img {
+  width: 100%;
+  height: 180px;
+  object-fit: fill;
+}
+
+.details {
+  padding: 10px 30px 30px 30px;
+  display: flex;
+  flex-direction: column;
+}
+.details h2 {
+  margin: 10px 0px;
+  font-size: 1.3rem;
 }
 
 body {
