--- a/src/scss/components/FlagSearch.scss
+++ b/src/scss/components/FlagSearch.scss
@@ -1,8 +1,8 @@
-.map_search {
+.flagsearch {
     padding: 50px;
 }
 
-.map_search_header {
+.flagsearch_header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -101,5 +101,14 @@
         transition: 0.2s ease-out;
     }
 
+}
+
+.flagsearch_body {
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    gap: 3%;
 }
 
