Added flag details(incomplete)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -220,6 +220,61 @@ header h1 {
   font-size: 1.3rem;
 }
 
+.loading {
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.spinningCircle {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: 4px solid rgba(255, 255, 255, 0);
+  border-top-color: 4px solid #7fc4d1;
+  border-right-color: 4px solid #7fc4d1;
+  -webkit-animation: single2 4s infinite linear;
+  animation: single2 4s infinite linear;
+}
+
+@-webkit-keyframes single2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    border-top-color: #7fc4d1;
+    border-right-color: #7fc4d1;
+  }
+  50% {
+    border-top-color: #1f4f58;
+    border-right-color: #1f4f58;
+  }
+  100% {
+    -webkit-transform: rotate(720deg);
+    transform: rotate(720deg);
+    border-top-color: #7fc4d1;
+    border-right-color: #7fc4d1;
+  }
+}
+@keyframes single2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    border-top-color: #7fc4d1;
+    border-right-color: #7fc4d1;
+  }
+  50% {
+    border-top-color: #1f4f58;
+    border-right-color: #1f4f58;
+  }
+  100% {
+    -webkit-transform: rotate(720deg);
+    transform: rotate(720deg);
+    border-top-color: #7fc4d1;
+    border-right-color: #7fc4d1;
+  }
+}
 body {
   background-color: #fafafa;
   font-family: "Nunito Sans", sans-serif;
@@ -247,7 +302,7 @@ body {
   transition: 0.1s ease-in;
 }
 
-.App {
+.home {
   min-height: 100vh;
 }
 
