Finished card details page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@
 @import "./components/Attribution.scss";
 @import "./components/FlagSearch.scss";
 @import "./components/FlagCard.scss";
+@import "./components/FlagDetails.scss";
 @import "./components/Loading.scss";
 
 body {
