--- a/src/css/index.css
+++ b/src/css/index.css
@@ -220,6 +220,63 @@ header h1 {
   font-size: 1.3rem;
 }
 
+.flagdetails {
+  padding: 50px;
+}
+.flagdetails button {
+  min-width: fit-content;
+  border: 0;
+  padding: 0.5rem 2rem;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+}
+.flagdetails button img {
+  height: 1.7rem;
+  padding: 3px;
+}
+
+.flagdetails_body {
+  margin: 50px 0px;
+  display: flex;
+  flex-direction: row;
+}
+.flagdetails_body img {
+  width: 100%;
+  margin-right: 8%;
+  flex: 0 42%;
+}
+
+.stats {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 0 50%;
+}
+.stats h1 {
+  margin: 2rem 0;
+}
+
+.text {
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.text span {
+  margin: 5px;
+}
+
+.borders {
+  gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .loading {
   height: 90vh;
   width: 100%;
