--- a/src/css/index.css
+++ b/src/css/index.css
@@ -82,6 +82,7 @@ header h1 {
 .dark_mode {
   padding: 5px;
   border: none;
+  border-radius: 5px;
   background-color: Transparent;
   display: flex;
   align-items: center;
@@ -180,7 +181,7 @@ header h1 {
   font-size: 0.8rem;
 }
 .dropdown .options a:hover {
-  background-color: #fafafa;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
 }
 .dropdown:hover .options, .dropdown .options:hover {
   transform: translateY(30%);
@@ -208,6 +209,9 @@ header h1 {
   width: 100%;
   height: 180px;
   object-fit: fill;
+}
+.flagcard:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
 }
 
 .details {
@@ -336,6 +340,10 @@ body {
   background-color: #fafafa;
   font-family: "Nunito Sans", sans-serif;
   transition: 0.1s ease-out;
+}
+
+button:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
 }
 
 .element {
