--- a/src/scss/components/FlagSearch.scss
+++ b/src/scss/components/FlagSearch.scss
@@ -89,7 +89,7 @@
         }
 
         a:hover {
-            background-color: get-neutral(5);
+            background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
         }
     }
 
