--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,10 @@ body {
     transition: get-transition(2);
 }
 
+button:hover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
+}
+
 .element {
     background-color: get-neutral(6);
     box-shadow: 0px 0px 5px 2px hsla(0, 0%, 0%, 0.1);
