--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,7 @@
 @import "./components/FlagCard.scss";
 @import "./components/FlagDetails.scss";
 @import "./components/Loading.scss";
+@import "./components/Pagination.scss";
 
 body {
     background-color: get-neutral(5);
@@ -17,6 +18,7 @@ body {
 
 button:hover {
     background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
+    transition: get-transition(1);
 }
 
 .element {
