--- a/src/scss/components/FlagSearch.scss
+++ b/src/scss/components/FlagSearch.scss
@@ -107,7 +107,7 @@
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 
     gap: 3%;
 }
